k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: django-port
              containerPort: 80
