k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - name: django-port
      port: 80
      targetPort: django-port
